# turbopelican

./: .gitignore  CHANGELOG.md  Makefile  README.md  init.lua  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: release.yml  run-ci.yml
assets/badge/: v1.json  v2.json
assets/readme/: run-turbopelican-init.yml
docs/: configuration.md  index.md  other-links.md  release-notes.md
docs/get-started/: index.md  modifying-your-website.md  prerequisites.md  running-adorn.md
src/turbopelican/: __init__.py  __main__.py  _args.py  args.py  create.py
src/turbopelican/_commands/: __init__.py
src/turbopelican/_commands/adorn/: adorn.py  config.py  create.py
src/turbopelican/_commands/adorn/tests/: test_config.py  test_create.py
src/turbopelican/_commands/init/: config.py  create.py  init.py
src/turbopelican/_commands/init/tests/: test_config.py  test_create.py
src/turbopelican/_newsite/: publishconf.py  turbopelican.toml
src/turbopelican/_newsite/content/: index.md  my-article.md
src/turbopelican/_newsite/themes/plain-theme/templates/: base.html
src/turbopelican/_templates/minimal/: pelicanconf.py  publishconf.py  pyproject.toml
src/turbopelican/_templates/newsite/: README.md  pelicanconf.py  publishconf.py  pyproject.toml  turbopelican.toml
src/turbopelican/_templates/newsite/.github/workflows/: turbopelican.yml
src/turbopelican/_templates/newsite/content/: index.md  my-article.md
src/turbopelican/_templates/newsite/themes/plain-theme/templates/: base.html
src/turbopelican/_utils/: __init__.py  config.py
src/turbopelican/_utils/config/: __init__.py  config.py  legacy.py
src/turbopelican/_utils/config/tests/: test_config.py  test_legacy.py
src/turbopelican/_utils/errors/: __init__.py  errors.py
src/turbopelican/_utils/shared/: __init__.py  args.py  create.py  shared.py
src/turbopelican/_utils/shared/tests/: test_args.py  test_create.py  test_shared.py
src/turbopelican/_utils/tests/: test_config.py
src/turbopelican/commands/init/: __init__.py  config.py  create.py  init.py
src/turbopelican/commands/init/tests/: test_config.py  test_create.py
src/turbopelican/newsite/: __init__.py  pelicanconf.py  publishconf.py  turbopelican.toml
src/turbopelican/newsite/.github/workflows/: run-quality-gates.yml
src/turbopelican/newsite/content/: my-article.md
src/turbopelican/tests/: test_args.py
