[project]
name = "turbopelican"
version = "0.3.0"
license = "AGPL-3.0-or-later"
description = "An uber-quick tool to create a Pelican static-site and deploy it to GitHub Pages."
readme = "README.md"
authors = [
    { name = "Elliot Simpson", email = "elliot@p-s.co.nz" }
]
requires-python = ">=3.11"
keywords = ["pelican", "static", "website", "generate"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: Pelican",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed"
]
dependencies = [
    "langcodes>=3.5.0",
    "pydantic>=2.10.6",
    "tomlkit>=0.13.2",
    "tzdata>=2025.1",
    "tzlocal>=5.3.1",
]

[project.urls]
Source = "https://github.com/turbopelican/turbopelican"
Issues = "https://github.com/turbopelican/turbopelican/issues"
Changelog = "https://github.com/turbopelican/turbopelican/blob/main/CHANGELOG.md"

[project.scripts]
turbopelican = "turbopelican.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pyright>=1.1.397",
    "ruff>=0.11.1",
]

